Set proper metadata in plugins

--- a/fr.inria.atlanmod.emf.utils.edit/plugin.properties
+++ b/fr.inria.atlanmod.emf.utils.edit/plugin.properties
@@ -1,7 +1,7 @@
 #
 
-pluginName = Dynregistry Edit Support
-providerName = www.example.org
+pluginName = EMF Utils - Dynamic Registry Manager Edit Plugin
+providerName = AtlanMod - Inria
 
 _UI_CreateChild_text = {0}
 _UI_CreateChild_text2 = {1} {0}
