--- a/fr.inria.atlanmod.emf.utils/plugin.properties
+++ b/fr.inria.atlanmod.emf.utils/plugin.properties
@@ -1,4 +1,4 @@
 #
 
-pluginName = Dynregistry Model
-providerName = www.example.org
+pluginName = EMF Utils - Dynamic Registry Manager Core Plugin
+providerName = AtlanMod - Inria
